# skyup

./: README.Docker.md  README.md  compose.yml
backend/: Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
backend/app/: deps.py  main.py  models.py
backend/app/core/: config.py  config1.py  cors.py  db.py  email.py
backend/app/helpers/: authentication.py  cloudinary.py  db.py  email.py  posts.py  subqueries.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 020a6d6602ae_init.py  04fdaaca0e84_.py  53d782754786_add_unique_constraint_on_username_end_.py  60323b503e71_add_rel_attr.py  a480f8f8d67f_add_email_verification_table.py  ae1f0c7201f7_add_cascading_delete.py  cc585abd63a1_add_refresh_token_field.py  d182e8d3ce3e_add_media_fields_for_posts.py  e17936c0712e_add_enum_on_relation_status.py  e706d7118346_.py
backend/app/routes/: __init__.py  authentication.py  post.py  profile.py  relation.py  reply.py  user.py
backend/app/schemas/: __init__.py  bookmark.py  email_verification.py  models_schemas.py  other_schemas.py  post.py  profile.py  public_shemas.py  relation.py  reply.py  token.py  user.py
backend/app/scripts/: seed.py
backend/app/templates/emails/: verification.html  welcome.html
frontend/: Dockerfile  README.md  next.config.ts  package.json  pnpm-lock.yaml  proxy.ts
frontend/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  query-provider.tsx
frontend/components/: app-sidebar.tsx  error-boundary.tsx  feed-scroll-restoration.tsx  field-error.tsx  menu.tsx  navbar.tsx  news.tsx  title.tsx  trends.tsx  (+1 more)
(+73 files in other folders)
