[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.3",
    "cloudinary>=1.44.1",
    "faker>=40.5.1",
    "fastapi-mail>=1.6.1",
    "fastapi[standard]>=0.128.1",
    "psycopg>=3.3.2",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.11.0",
    "python-multipart>=0.0.22",
    "sqlmodel>=0.0.32",
    "uuid-utils>=0.14.0",
]
